<resources>
    <string name="app_name">FinalPractice1</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="add">ADD</string>
    <string name="imageView">ImageView</string>
    <string name="Name">TextView</string>
    <string name="Age">Age</string>
    <string name="ageDescription">AgeDescription</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="editText">editText</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>
